Two simulators connected to one service

--- a/src/demo/configuration/demo1/configuration-sample.json
+++ b/src/demo/configuration/demo1/configuration-sample.json
@@ -6,5 +6,7 @@
     "simulator-port": 4099,
     "disis-address": "localhost",
     "disis-port": 8099,
-    "disis-path": "/disis"
+    "disis-path": "/disis",
+    "surrounding-simulators": [
+    ]
 }
